Skrivit text, lagt till bilder

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,2 +1,7 @@
-$primary-blue: #7F80CD;
-$primary-blue-secondery: lighten(#7F80CD,20%)
+$primary-pink: pink;
+$primary-pink-secondery: lighten(pink,5%);
+$primary-pink-third: darken(pink ,10%);
+
+$primary-white: white;
+
+$primary-font: helvetica, sans-serif, arial
