--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -7,6 +7,12 @@
     font-family: base.$primary-font;
 }
 
+%margin-auto {
+    margin: 0 auto;
+}
+  
+
+
 h1 { color: base.$primary-pink;
 
 }
@@ -24,15 +30,14 @@ header {
 }
 
 footer {
-grid-area: footer;
+
 background-color: base.$primary-pink-third;
 color: base.$primary-white;
 text-align: center;
-font-size: 1.5rem;
-width: 100%;
-height: 100%;
+font-size: 1.1rem;
+@include base.size(100%);
 min-height: 20vh;
-margin: 0 auto;
+@extend %margin-auto;
 padding-top: 10vh;
 margin-top: 40px;
 }
@@ -48,7 +53,7 @@ margin-top: 40px;
 nav {
     background-color: base.$primary-pink;
     box-shadow: 0 0px 10px rgba(0, 0, 0, 0.71);
-    font-size: 1.4em;
+    font-size: 1.2em;
     position: absolute;
     right: 0;
     top: 0;
@@ -60,12 +65,12 @@ nav {
     width: 100%;
     list-style-type: none;
     text-align: center;
-    margin: 0 auto;
+    @extend %margin-auto;
     padding: 0;}
 
     li {
     padding: 0.8em 0;
-    width: 100%;
+    @include base.size(100%);
 
     }
 
@@ -78,6 +83,7 @@ nav {
     li:hover {
     background-color: base.$primary-pink-secondery;
     cursor: pointer;
+    text-decoration: underline white;
     }
 }
 
@@ -144,17 +150,21 @@ nav {
 main {
     max-width: 600px;
     width: 80%;
-    margin: 0 auto;
+    @extend %margin-auto;
     font-size: 1.2em;
+    background-color: white;
 }
 
 h2 {
-    margin: 1em 0;
+    padding: 1em 0;
 }
 
 main p {
     font-size: 1em;
     line-height: 1.4em;
+    @extend .open;
+
+
 }
 
 .bilder {
@@ -167,6 +177,8 @@ main p {
 .responsive {
     width: 100%;
     height: auto;
+    @extend .open;
+
   }
 
 /* Media querys */
@@ -194,7 +206,7 @@ main p {
         position: static;
         box-shadow: 0 0px 0px;
         height: auto;
-        font-size: 1.4em;
+        font-size: 1.1em;
         width: auto;
      ul {
         height: 100%;
